# esp-detection

./: .gitignore  flake.nix  pyproject.toml  train.py
datasets/coco_cat/labels/train/: 000000001675.txt  000000004795.txt  000000010363.txt  000000014007.txt  000000014831.txt  000000015497.txt  000000018833.txt  000000022892.txt  000000023272.txt  000000025560.txt  000000039769.txt  000000046378.txt  000000047121.txt  000000049810.txt  000000051008.txt  000000058111.txt  000000061333.txt  000000063552.txt  000000071226.txt  000000077396.txt  000000077595.txt  000000078420.txt  000000078426.txt  000000080666.txt  000000080949.txt  000000084362.txt  000000084650.txt  000000089271.txt  000000094336.txt  000000098839.txt  000000101420.txt  000000101762.txt  000000106389.txt  000000107087.txt  000000108244.txt  000000109055.txt  000000112798.txt  000000115885.txt  000000116825.txt  000000117374.txt  (+107 more)
